tests/src/frontend/typechecking/invalid/prim_pattern_match_2.sk
fun main(): void {
  print_raw(
    5 match {
    | Int() -> void
    },
  )
}
